--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "editorapp",
+  "homepage": "https://Dongamkalyan.github.io/ReactApp",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -18,6 +19,8 @@
     "web-vitals": "^1.1.2"
   },
   "scripts": {
+    "predeploy":"npm run build",
+    "deploy":"gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
